--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -6,7 +6,8 @@
     class: "fixed bottom-safe-offset-4 right-safe-offset-4 z-30 bg-orange-500 text-white p-3 rounded-full shadow-lg icon" do %>
     map
    <% end %>
-  <div class="fixed bottom-20 right-4 z-40" data-controller="main-button">
+
+  <div class="fixed bottom-safe-offset-20 right-4 z-40" data-controller="main-button">
 
   <!-- Option Buttons -->
   <div
