--- a/app/views/activities/_new_activity_modal.html.erb
+++ b/app/views/activities/_new_activity_modal.html.erb
@@ -7,9 +7,10 @@
         <%= f.fields_for :activity do |activity_fields| %>
         <%= activity_fields.hidden_field :category, value: "hobbies" %>
           <%= activity_fields.input :name,
-            label: "Nom + localisation",
-            label_html: { class: "block text-sm font-medium text-white mb-2" },
-            input_html: { class: "w-full bg-gray-800 text-white border border-gray-700 rounded-md py-2 px-3 focus:ring-2 focus:ring-orange-500 focus:outline-none" } %>
+            label: :Lieu,
+            placeholder:" ",
+            required: false,
+            input_html: { class: "bg-gray-800 text-white placeholder:italic placeholder:text-slate-400 block w-full border border-white rounded-md py-3 shadow-sm focus:outline-none focus:border-orange-500 focus:ring-orange-600 focus:ring-1 sm:text-sm" } %>
 
           <%# <%= activity_fields.input :address,
             label: "Adresse",
