--- a/app/views/trips/_search_result.html.erb
+++ b/app/views/trips/_search_result.html.erb
@@ -21,21 +21,20 @@
         <span><%= trip.destination.country %></span>
       </div>
 
-      <!-- Exploration stats -->
       <div class="flex flex-col mt-12 text-gray-200 leading-relaxed gap-3" data-controller="waiting-animation">
-        <div class="text-sm animation-item transition-all duration-1000  opacity-0 translate-y-40">
+        <div class="text-sm animation-item transition-all duration-1000 ease-linear opacity-0 translate-y-40">
           <span class="flex items-center gap-3"><span class="icon icon-20">paid</span><strong>Devise</strong></span>
           <div class="ml-8 text-sm"><%= trip.destination.currency %></div>
         </div>
-        <div class="text-sm animation-item transition-all duration-1000  opacity-0 translate-y-40">
+        <div class="text-sm animation-item transition-all duration-1000 ease-linear opacity-0 translate-y-40">
           <span class="flex items-center gap-3"><span class="icon icon-20">badge</span><strong>Documents nécessaires</strong></span>
           <div class="ml-8 text-sm"><%= trip.destination.papers %></div>
         </div>
-        <div class="text-sm animation-item transition-all duration-1000  opacity-0 translate-y-40">
+        <div class="text-sm animation-item transition-all duration-1000 ease-linear opacity-0 translate-y-40">
           <span class="flex items-center gap-3"><span class="icon icon-20">lunch_dining</span><strong>Spécialités culinaires</strong></span>
           <div class="ml-8 text-sm"><%= trip.destination.food %></div>
         </div>
-        <div class="text-sm animation-item transition-all duration-1000  opacity-0 translate-y-40">
+        <div class="text-sm animation-item transition-all duration-1000 ease-linear opacity-0 translate-y-40">
           <span class="flex items-center gap-3"><span class="icon icon-20">power</span><strong>Type de prise électrique</strong></span>
           <div class="ml-8 text-sm"><%= trip.destination.power %></div>
         </div>
