--- a/app/views/trips/_suggestion_result.html.erb
+++ b/app/views/trips/_suggestion_result.html.erb
@@ -3,7 +3,7 @@
   <div class="swiper-container flex justify-center items-center h-screen w-screen">
     <div class="swiper mySwiper w-72 h-96">
       <div class="swiper-wrapper">
-        <% @trip_activities.each do |trip_activity|%>
+        <% trip_activities.each do |trip_activity|%>
         <div class="swiper-slide rounded-2xl font-bold text-white bg-black" data-index="0">
           <div class="flex items-center justify-center h-full w-full">
             <%= cl_image_tag trip_activity.activity.photos[0].key, class:"absolute inset-0 w-full h-full object-cover opacity-80" %>
@@ -14,8 +14,6 @@
       </div>
     </div>
   </div>
-
-
 
   <div data-controller="loading" data-loading-search-id="<%= trip.id %>"></div>
 </div>
