--- a/app/views/activities/_new_activity_modal.html.erb
+++ b/app/views/activities/_new_activity_modal.html.erb
@@ -7,7 +7,7 @@
         <%= f.fields_for :activity do |activity_fields| %>
         <%= activity_fields.hidden_field :category, value: "hobbies" %>
           <%= activity_fields.input :name,
-            label: "Nom + localisation",
+            label: "Lieu",
             label_html: { class: "block text-sm font-medium text-white mb-2" },
             input_html: { class: "w-full bg-gray-800 text-white border border-gray-700 rounded-md py-2 px-3 focus:ring-2 focus:ring-orange-500 focus:outline-none" } %>
 
