--- a/app/views/searches/_loading.html.erb
+++ b/app/views/searches/_loading.html.erb
@@ -1,5 +1,5 @@
 <%= turbo_frame_tag "modal-frame" do %>
-  <div  class="fixed inset-0 flex flex-col items-center justify-center z-50 h-screen w-screen">
+  <div  class="fixed inset-0 flex flex-col items-center justify-center z-50 h-screen w-screen radial-gradient-dark-orange">
     <%= link_to trips_path do %>
       <button class="fixed z-10 p-safe-or-4" >
         <p class="icon icon-200 drop-shadow-xl text-4xl text-white p-5"></p>
