--- a/app/views/activities/_new_ai_suggestion_modal.html.erb
+++ b/app/views/activities/_new_ai_suggestion_modal.html.erb
@@ -60,7 +60,7 @@
     <%= tag.input name:"trip", type: :hidden, value: @trip.id %>
       <!-- Bouton d'envoi -->
       <div class="form-actions mt-6 flex justify-center">
-        <%= tag.button "Ajouter une activité", type: :submit, class: "w-full bg-orange-500 text-white py-3 px-6 rounded-lg text-lg font-bold active:bg-orange-600" %>
+        <%= tag.button "Ajouter une activité", disabled: true,type: :submit, class: "w-full bg-orange-500 text-white py-3 px-6 rounded-lg text-lg font-bold active:bg-orange-600 cursor-not-allowed opacity-50" %>
       </div>
     <% end %>
   </div>
