--- a/app/views/trips/_carrousel_item.html.erb
+++ b/app/views/trips/_carrousel_item.html.erb
@@ -1,13 +1,13 @@
 
 <%= link_to activity_path(activity), data: { turbo_frame: "_top" } do%>
   <div
-  class="carousel-item snap-start bg-gray-800 shadow-lg rounded-lg p-4 cursor-pointer hover:shadow-xl transition-shadow w-72 h-52 overflow-hidden"
+  class="carousel-item snap-start bg-gray-800 bg-opacity-85 shadow-lg rounded-lg py-4 px-2 cursor-pointer hover:shadow-xl transition-shadow w-72 h-52 overflow-hidden"
   data-carrousel-target="item"
   data-carousel-index-value="<%= index %>"
 >
   <!-- Photo -->
   <% if activity.photos.first.present? %>
-    <%= cl_image_tag activity.photos.first.key, class: "rounded-full size-20" %>
+    <%= cl_image_tag activity.photos.first.key, class: "rounded-full size-16 object-cover shrink-0" %>
   <% else %>
     <%= image_tag 'no_picture.jpg', class: "rounded-full size-20", alt: "No picture available" %>
   <% end %>
@@ -15,7 +15,7 @@
   <!-- Infos -->
   <div class="flex-col pl-4">
     <div class="flex items-center justify-between">
-      <h3 class="text-lg font-semibold text-white"><%= truncate(activity.name, length: 50, omission: "...") %></h3>
+      <h3 class="text-lg font-semibold text-white leading-5"><%= truncate(activity.name, length: 50, omission: "...") %></h3>
     </div>
     <p class="text-white text-xs mt-2"><%= truncate(activity.description, length: 80, omission: "...") %></p>
     <div class="flex items-center space-x-1 text-orange-400  mt-2">
@@ -26,9 +26,7 @@
       <% end %>
     </div>
     <div class="text-xs text-white mt-2 flex items-center gap-2">
-      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="currentColor" viewBox="0 0 24 24">
-        <path d="M12 2C8.134 2 5 5.134 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.866-3.134-7-7-7zm0 9.5c-1.381 0-2.5-1.119-2.5-2.5s1.119-2.5 2.5-2.5 2.5 1.119 2.5 2.5-1.119 2.5-2.5 2.5z" />
-      </svg>
+      <p class="icon text-xs">location_on</p>
       <%= activity.address %>
     </div>
   </div>
