--- a/app/views/trips/_map_view.html.erb
+++ b/app/views/trips/_map_view.html.erb
@@ -11,8 +11,8 @@
     data-map-markers-value='<%= raw @markers.to_json %>'>
   </div>
 
-  <div class="absolute bottom-16 left-0 right-0 z-10 overflow-x-auto" data-controller="carrousel">
-    <div class="carousel carousel-center rounded-box space-x-4 p-4  pb-safe-offset-4" data-carrousel-target="container">
+  <div class="absolute bottom-safe-offset-16 left-0 right-0 z-10 overflow-x-auto" data-controller="carrousel">
+    <div class="carousel carousel-center rounded-box space-x-4 p-4" data-carrousel-target="container">
       <% @activities.each_with_index do |activity, index| %>
         <%= render "carrousel_item", activity: activity, index: index %>
       <% end %>
