--- a/app/views/activities/_new_activity_modal.html.erb
+++ b/app/views/activities/_new_activity_modal.html.erb
@@ -71,8 +71,7 @@
           <div class="flex items-center overflow-x-auto space-x-4 scrollbar-hide" data-tabs-target="daysContainer">
             <% @calendar_dates.each_with_index do |date, index| %>
               <div
-                class="flex flex-col items-center cursor-pointer px-4 py-3 rounded-lg
-                       <%= index == 0 ? 'bg-orange-500 text-white' : 'bg-gray-800 text-white' %> hover:bg-orange-500 hover:text-white transition"
+                class="flex flex-col items-center cursor-pointer px-4 py-3 rounded-lg bg-gray-800 text-white hover:bg-orange-500 hover:text-white transition"
                 data-action="click->tabs#updateDate"
                 data-tabs-day="<%= index %>"
                 data-tabs-target="day"
@@ -81,8 +80,7 @@
                 <span class="text-xs font-bold"><%= date.strftime('%d') %></span>
               </div>
             <% end %>
-            <%# <%= tag.input :start_date, type: :hidden, typrname: "trip_activity[start_date]", data: { tabs_target: "hiddenDate" } %>
-            <%= f.hidden_field :start_date, typrname: "trip_activity[start_date]", data: { tabs_target: "hiddenDate" } %>
+            <%= f.hidden_field :start_date, typrname: "trip_activity[start_date]", data: { "tabs-target": "hiddenDate" } %>
           </div>
         </div>
 
